# validation-oracle-smart-contract

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  renovate.json  rustfmt.toml  service.datadog.yaml  setup_vo_contract.sh
.cargo/: config
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: build.yml  publish.yml  release-drafter.yml
examples/: schema.rs
proptest-regressions/: README.md  instantiate.txt
scripts/: create_and_update_entity.sh  create_and_update_validation_definition.sh  create_and_update_validation_request.sh  create_validation_definition.sh  create_validation_request.sh  setup_vo_contract.sh
src/: contract.rs  instantiate.rs  lib.rs  migrate.rs
src/execute/: create_request.rs  create_validation_definition.rs  create_validation_scope.rs  entity.rs  mod.rs  request.rs  update_settings.rs  validation_definition.rs  validation_request.rs  validator_configuration.rs
src/query/: contract_info.rs  entity.rs  get_info.rs  get_request.rs  get_validation_definition.rs  mod.rs  request.rs  sort.rs  validation_definition.rs
src/storage/: contract_info.rs  entity.rs  mod.rs  request.rs  request_storage.rs  validation_definition.rs  validator_configuration.rs
src/test/: arbitrary.rs  error_helpers.rs  helpers.rs  mock_instantiate.rs  mock_marker.rs  mod.rs
src/types/: access_definition.rs  access_route.rs  entity.rs  mod.rs  validation_cost.rs  validation_definition.rs  validator_configuration.rs
src/types/core/: constants.rs  error.rs  msg.rs
src/types/request/: mod.rs  settings_update.rs  validation_definition.rs  validation_request.rs  validator_configuration.rs
src/util/: aliases.rs  constants.rs  create_request_utilities.rs  event_attributes.rs  fees.rs  functions.rs  helpers.rs  mod.rs  provenance.rs  request_fee.rs
