[package]
name = "validation-oracle-smart-contract"
version = "0.1.0"
edition = "2021"

exclude = [
    "artifacts/",
    "schema/",
    "scripts/",
    # TODO: Can/should we exclude src/test here as well?
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "=1.1.9"
provwasm-std = "=1.1.1"
cosmwasm-std = { version = "=1.1.9", default-features = false, features = ["iterator"] }
cosmwasm-storage = "=1.1.9"
cw-storage-plus = "=1.0.1"
#os-gateway-contract-attributes = "=1.0.1"
result-extensions = "=1.0.2"
#schemars = "=0.8.11"
semver = "=1.0.14"
#serde = { version = "=1.0.145", default-features = false, features = ["derive"] } # Use for structs/enums which are not contract inputs or outputs
#serde-json-wasm = { version = "=0.4.1" } # Use for operating on JSON strings
thiserror = "=1.0.37"

[dev-dependencies]
bech32 = "=0.9.1" # TODO: Use this
proptest = "=1.0.0"
provwasm-mocks = "=1.1.1"
uuid = { version = "=1.2.2", features = ["v4"] } # TODO: Use this
